# zion_core

./: .gitignore  CMakeLists.txt  pull_src.sh  push_src.sh  replace_lib.sh
3rd/darknet/: libdarknet.dylib
3rd/darknet/MACM1/: libdarknet.dylib
3rd/gsl/lib/MACINTEL/: libgsl.dylib
3rd/gsl/lib/MACM1/: libgsl.dylib
3rd/spdlog/: async_logger-inl.h  async_logger.h  common.h  fwd.h  logger-inl.h  spdlog.h  stopwatch.h
3rd/spdlog/cfg/: argv.h  env.h  helpers-inl.h
3rd/spdlog/details/: backtracer.h  circular_q.h  console_globals.h  fmt_helper.h  log_msg-inl.h  log_msg_buffer.h  os-inl.h  os.h  periodic_worker-inl.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client.h
3rd/spdlog/fmt/: fmt.h
3rd/spdlog/fmt/bundled/: chrono.h  color.h  format.h  ostream.h
3rd/spdlog/include/: async.h  common-inl.h  formatter.h  logger.h  pattern_formatter-inl.h  tweakme.h  version.h
3rd/spdlog/include/details/: file_helper-inl.h  file_helper.h  thread_pool.h
3rd/spdlog/include/fmt/: bin_to_hex.h
3rd/spdlog/include/fmt/bundled/: compile.h  format-inl.h
3rd/spdlog/include/sinks/: android_sink.h  base_sink.h  basic_file_sink-inl.h  null_sink.h  stdout_color_sinks-inl.h  stdout_sinks.h  win_eventlog_sink.h
3rd/spdlog/include/spdlog/: pattern_formatter.h  spdlog-inl.h
3rd/spdlog/include/spdlog/cfg/: helpers.h
3rd/spdlog/include/spdlog/details/: backtracer-inl.h  log_msg.h  log_msg_buffer-inl.h  mpmc_blocking_q.h  null_mutex.h  periodic_worker.h  tcp_client-windows.h  thread_pool-inl.h  windows_include.h
3rd/spdlog/include/spdlog/fmt/: chrono.h  ostr.h
3rd/spdlog/include/spdlog/fmt/bundled/: core.h  locale.h  os.h  posix.h  printf.h  ranges.h
3rd/spdlog/include/spdlog/sinks/: rotating_file_sink.h  stdout_color_sinks.h  stdout_sinks-inl.h  systemd_sink.h  tcp_sink.h  wincolor_sink-inl.h  wincolor_sink.h
3rd/spdlog/sinks/: ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  msvc_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  sink-inl.h  sink.h  syslog_sink.h
py/: video_mover.py
src/: FrTrans.cpp  MessageManager.cpp  MessageManager.hpp  TaskManager.cpp  TaskManager.hpp  main.cpp
src/common/: CMDefine.hpp  CMdLogger.cpp  CMdLogger.hpp  Configurator.cpp  Configurator.hpp  ThingQueue.h  TimeUtil.cpp  TimeUtil.hpp
src/daemon/: DMServer.cpp  DMServer.h  DaemonDefine.h  DaemonMgr.cpp  DaemonMgr.h  DaemonParser.cpp  DaemonParser.h  ErrorList.cpp  ErrorList.h  define.h
src/dove/: Algebra.cpp  Algebra.hpp  ColorTracking.cpp  DefData.hpp  Detection.cpp  Detection.hpp  ExpUtil.cpp  ExpUtil.hpp  GrayTracking.cpp  Stabilization.cpp  Stabilization.hpp  Tracking.cpp  Tracking.hpp
